--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <div class="full-wrapper">
         <div class="full-width footer clearfix">
-            <p class="p">Created By:<span> Yash Lohar</span></p>
+            <p class="p">Developed By:<span> Yash Lohar</span></p>
 
             <span class="fa fa-twitter"></span>
             <span class="fa fa-facebook"></span>
